--- a/task1.html
+++ b/task1.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+	<p>привет </p>
   <p>Lorem ipsum <b>dolor sit amet, consectetur adipisicing elit.</b> Eos itaque <i>libero quaerat optio nostrum dolor</i>, <u>nihil omnis enim adipisci</u>  minus! <strike>Neque impedit eligendi laboriosam at doloremque expedita quos, explicabo distinctio</strike>.</p>
   <p align="right">Id deleniti reprehenderit corrupti, fuga error et quaerat architecto recusandae voluptatibus tenetur sit vero quibusdam, accusantium nisi, dolores consequatur doloribus dolorem illo. Doloremque obcaecati molestiae impedit eum. Aliquam ratione, aut!</p>
   <p align="center">Ipsam doloremque labore ab fugit! Quo dolor praesentium nesciunt quae sint similique odit itaque repudiandae, maxime quibusdam. Animi sapiente eius non omnis odio nesciunt velit delectus dolorum, eos reprehenderit hic.</p>
